--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1299,7 +1299,8 @@ input, select, textarea {
 		}
 
 			#header .logo .icon:before {
-				font-size: 2rem;
+				/* font-size: 2rem; */
+				content: none;
 			}
 
 		#header .logo img {
