--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -8,14 +8,15 @@
   }
   
   .project-thumbnail {
-    width: calc(50% - 10px); /* Adjust the percentage based on the number of thumbnails per row */
-    height: 200px; /* Set a fixed height */
+    width: 48%; /* Adjust the percentage based on the number of thumbnails per row */
+    height: 0;
+    padding-bottom: 48%; /* Set the aspect ratio to 1:1 */
     overflow: hidden;
     cursor: pointer;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin-bottom: 10px; /* Add some margin below each thumbnail */
-    position: relative; /* Add this line */
+    position: relative;
   }
   
   .project-thumbnail img {
