--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -8,23 +8,41 @@
   }
   
   .project-thumbnail {
-    width: 48%; /* Adjust the percentage based on the number of thumbnails per row */
-    height: 0;
-    padding-bottom: 48%; /* Set the aspect ratio to 1:1 */
-    overflow: hidden;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    margin-bottom: 10px; /* Add some margin below each thumbnail */
     position: relative;
   }
   
   .project-thumbnail img {
-    position: absolute; /* Add this line */
-    top: 50%; /* Add this line */
-    left: 50%; /* Add this line */
-    transform: translate(-50%, -50%); /* Add this line */
-    width: 100%; /* Set width to 100% */
-    height: 100%; /* Set height to 100% */
-    object-fit: cover; /* Add this line */
+    width: 100%;
+    height: auto;
+    transition: transform .3s; /* Add transition for smooth hover effect */
+  }
+  
+  .project-thumbnail:hover img {
+    transform: scale(1.1); /* Enlarge image on hover */
+  }
+  
+  .overlay {
+    position: absolute;
+    bottom: 0;  
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6); /* Black background with opacity */  
+    overflow: hidden;
+    width: 100%;  
+    height: 0;
+    transition: .5s ease;
+  }
+  
+  .project-thumbnail:hover .overlay {
+    height: 100%; /* Show overlay on hover */
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
   }
