--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -8,15 +8,31 @@
   }
   
   .project-thumbnail {
-    display: inline-block;
+    /*display: inline-block;
     width: calc(50% - 10px);
     margin-bottom: 10px;
-    text-decoration: none;
+    text-decoration: none; */
+    width: 48%; /* Adjust the percentage based on the number of thumbnails per row */
+    height: 0;
+    padding-bottom: 48%; /* Set the aspect ratio to 1:1 */
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-bottom: 10px; /* Add some margin below each thumbnail */
+    position: relative;
   }
   
   .project-thumbnail img {
-    width: 100%;
-    height: auto;
+    /*width: 100%;
+    height: auto; */
+    position: absolute; /* Add this line */
+    top: 50%; /* Add this line */
+    left: 50%; /* Add this line */
+    transform: translate(-50%, -50%); /* Add this line */
+    width: 100%; /* Set width to 100% */
+    height: 100%; /* Set height to 100% */
+    object-fit: cover; /* Add this line */
   }
   
   @media (max-width: 768px) {
