--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -53,12 +53,15 @@
     background-color: rgba(0, 0, 0, 0.6); /* Black background with opacity */  
     overflow: hidden;
     width: 100%;  
-    height: 0;
-    transition: .5s ease;
+    height: 100%; /* Add this line */
+    display: none; /* Add this line */
+    transition: height 0.5s, opacity 0.5s ease; /* Add this line */
   }
   
   .project-thumbnail:hover .overlay {
     opacity: 1;
+    height: 100%;
+    display: block; /* Add this line */
   }
   
   .text {
