--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -26,10 +26,6 @@
   .project-thumbnail img {
     /*width: 100%;
     height: auto; */
-    position: absolute; /* Add this line */
-    top: 50%; /* Add this line */
-    left: 50%; /* Add this line */
-    transform: translate(-50%, -50%); /* Add this line */
     width: 100%; /* Set width to 100% */
     height: 100%; /* Set height to 100% */
     object-fit: cover; /* Add this line */
@@ -50,6 +46,7 @@
     bottom: 0;  
     left: 0;
     right: 0;
+    top: 0;
     background-color: rgba(0, 0, 0, 0.6); /* Black background with opacity */  
     overflow: hidden;
     width: 100%;  
