--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -4,7 +4,7 @@
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     column-count: 2; /* Add this line */
-    column-gap: 10px; /* Add this line */
+    column-gap: 20px; /* Add this line */
   }
   
   .project-thumbnail {
@@ -12,8 +12,8 @@
     width: calc(50% - 10px);
     margin-bottom: 10px;
     text-decoration: none; */
-    width: 48%; /* Adjust the percentage based on the number of thumbnails per row */
-    height: 0;
+    width: 100%; /* Adjust the percentage based on the number of thumbnails per row */
+    height: 100%;
     padding-bottom: 48%; /* Set the aspect ratio to 1:1 */
     overflow: hidden;
     cursor: pointer;
