--- a/assets/css/project-gallery.css
+++ b/assets/css/project-gallery.css
@@ -9,14 +9,14 @@
     width: calc(50% - 10px);
     margin-bottom: 10px;
     text-decoration: none; */
-    width: 100%; /* Adjust the percentage based on the number of thumbnails per row */
-    height: auto;
-    padding-bottom: 48%; /* Set the aspect ratio to 1:1 */
+    width: calc(50% - 5px); /* Subtracting 5px to account for the 10px gap between thumbnails */
+    height: 0;
+    padding-bottom: 50%; /* Set the aspect ratio to 1:1 */
     overflow: hidden;
     cursor: pointer;
     border: 1px solid #ccc;
     box-sizing: border-box;
-    margin-bottom: 10px; /* Add some margin below each thumbnail */
+    margin-bottom: 10px;
     position: relative;
   }
   
@@ -26,6 +26,9 @@
     width: 100%; /* Set width to 100% */
     height: 100%; /* Set height to 100% */
     object-fit: cover; /* Add this line */
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   
   @media (max-width: 768px) {
