--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -82,6 +82,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
+  overflow: auto;
   z-index: 1000; /* Ensure modal is on top of other content */
 }
 
@@ -91,6 +92,10 @@
   border: 1px solid #888;
   max-width: 600px;
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .close {
@@ -99,3 +104,5 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+
