--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -73,38 +73,39 @@
 
 /* Styles for modal */
 .modal {
-  display: none;
   position: fixed;
-  top: 30%;
-  left: 30%;
-  width: 60%;
-  height: 50%;
-  background-color: rgba(13, 15, 16, 0.85);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
   justify-content: center;
   align-items: center;
-  z-index: 10000; /* Ensure modal is on top of other content */
 }
 
-.modalContent {
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  max-width: 600px;
-  width: calc(100% - 200px);
-  height: auto;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  box-sizing: border-box;
-  transform: translate(-50%, -50%);
+.modal-content {
+  background-color: #f9f9f9;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+  width: 40rem;
+  max-width: 80%;
+  position: relative;
 }
 
-.close {
-  color: #aaa;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
+.modal-content h2 {
+  margin-top: 0;
+}
+
+.modal-content img {
+  max-width: 100%;
+  margin-bottom: 2rem;
+}
+
+.modal-content p {
+  font-size: 1.1rem;
+  line-height: 1.5;
 }
 
 
