--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,3 +1,8 @@
+.projects {
+  height: 500px; /* Change this value to the height */
+  background-color: #f2f2f2; /* Change this value adjust the background color */
+}
+
 .project {
   margin-bottom: 3rem;
 }
@@ -27,7 +32,7 @@
 
 .project-item a:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 8px rgba(82, 81, 81, 0.15);
 }
 
 .project-item a img {
