--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,10 +1,16 @@
 .projects {
-  height: 500px; /* Change this value to the height */
-  background-color: #f2f2f2; /* Change this value adjust the background color */
+
+  background-color: inherit;
+
+  padding: 1rem;
 }
 
 .project {
   margin-bottom: 3rem;
+}
+
+.project:hover {
+  background-color: #ddd;
 }
 
 .project-list {
@@ -26,13 +32,13 @@
   position: relative;
   overflow: hidden;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(159, 152, 230, 0.1);
   transition: transform 0.3s ease-in-out;
 }
 
 .project-item a:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 8px rgba(82, 81, 81, 0.15);
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.63);
 }
 
 .project-item a img {
@@ -65,7 +71,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: inherit;
   display: none;
   justify-content: center;
   align-items: center;
