--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,8 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2rem 0;
+		/*margin: 0 0 2rem 0; this is the original line of code, not the one below with margin:auto*/
+		margin:auto;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -734,7 +735,8 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2rem 0;
+		margin:auto;
+		/*margin: 0 0 2rem 0; this line is original, not the "margin:auto" line*/
 		padding-left: 1em;
 	}
 
