--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,7 +1,5 @@
 .projects {
-
   background-color: inherit;
-
   padding: 1rem;
 }
 
@@ -23,7 +21,7 @@
 }
 
 .project-item {
-  width: calc(33.333% - 2rem);
+  width: calc(45% - 1rem);
   margin: 1rem;
 }
 
@@ -42,15 +40,21 @@
 }
 
 .project-item a img {
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
   height: auto;
 }
 
 .project-item a h3 {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
   padding: 1rem;
@@ -59,6 +63,7 @@
   text-align: center;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  height: 100%;
 }
 
 .project-item a:hover h3 {
