--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -91,3 +91,15 @@
   top: 1rem;
   right: 1rem;
 }
+
+@media (min-width: 768px) {
+  .project-item {
+    width: calc(45% - 1rem);
+  }
+}
+
+@media (max-width: 767.98px) {
+  .project-item {
+    width: 100%;
+  }
+}
